fix: Refactor Events API
