# src/controllers/event.controller.ts
@@ -1,13 +1,13 @@
 import { Response } from "express";
 import { IPaginationQuery, IReqUser } from "../utils/interfaces";
 import response from "../utils/response";
-import EventModel, { eventDAO, TEvent } from "../models/event.model";
+import EventModel, { eventDAO, TypeEvent } from "../models/event.model";
 import { FilterQuery, isValidObjectId } from "mongoose";
 
 export default {
   async create(req: IReqUser, res: Response) {
     try {
-      const payload = { ...req.body, createdBy: req.user?.id } as TEvent;
+      const payload = { ...req.body, createdBy: req.user?.id } as TypeEvent;
       await eventDAO.validate(payload);
       const result = await EventModel.create(payload);
       response.success(res, result, "Event Created Successfully!");
@@ -17,24 +17,39 @@ export default {
   },
   async findAll(req: IReqUser, res: Response) {
     try {
-      const {
-        page = 1,
-        limit = 10,
-        search,
-      } = req.query as unknown as IPaginationQuery;
-      const query: FilterQuery<TEvent> = {};
+      const buildQuery = (filter: any) => {
+        let query: FilterQuery<TypeEvent> = {};
 
-      if (search) {
-        Object.assign(query, {
-          ...query,
-          $text: {
-            $search: search,
-          },
-        });
-      }
+        if (filter.search) query.$text = { $search: filter.search };
+        if (filter.category) query.category = filter.category;
+        if (filter.isOnline) query.isOnline = filter.isOnline;
+        if (filter.isFeatured) query.isFeatured = filter.isFeatured;
+        if (filter.isPublished) query.isPublished = filter.isPublished;
+
+        return query;
+      };
+
+      const {
+        limit = 10,
+        page = 1,
+        search,
+        category,
+        isOnline,
+        isFeatured,
+        isPublished,
+      } = req.query;
+
+      const query = buildQuery({
+        search,
+        category,
+        isPublished,
+        isFeatured,
+        isOnline,
+      });
+
       const result = await EventModel.find(query)
-        .limit(limit)
-        .skip((page - 1) * limit)
+        .limit(+limit)
+        .skip((+page - 1) * +limit)
         .sort({ createdAt: -1 })
         .exec();
       const count = await EventModel.countDocuments(query);
@@ -42,9 +57,9 @@ export default {
         res,
         result,
         {
-          current: page,
+          current: +page,
           total: count,
-          totalPages: Math.ceil(count / limit),
+          totalPages: Math.ceil(count / +limit),
         },
         "Success Finding All Event!"
       );
