# src/docs/swagger_output.json
@@ -377,7 +377,7 @@
         "description": "",
         "parameters": [
           {
-            "name": "page",
+            "name": "search",
             "in": "query",
             "schema": {
               "type": "string"
@@ -386,15 +386,45 @@
           {
             "name": "limit",
             "in": "query",
+            "default": 10,
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "default": 1,
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "category",
+            "in": "query",
             "schema": {
               "type": "string"
             }
           },
           {
-            "name": "search",
+            "name": "isOnline",
             "in": "query",
             "schema": {
-              "type": "string"
+              "type": "boolean"
+            }
+          },
+          {
+            "name": "isPublished",
+            "in": "query",
+            "schema": {
+              "type": "boolean"
+            }
+          },
+          {
+            "name": "isFeatured",
+            "in": "query",
+            "schema": {
+              "type": "boolean"
             }
           }
         ],
